[mypy]
namespace_packages = True
warn_unused_configs = True
disallow_subclassing_any = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True

[flake8]
max-line-length = 160

[metadata]
name = mto
version = 0.0.1
description = Mobile Test Orchestrator (MTO) provides APIs to orchestrate test execution against Android devices.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD License
license_file = LICENSE

[options]
install_requires =
  apk-bitminer

python_requires = >=3.6